--- a/style/main.css
+++ b/style/main.css
@@ -31,8 +31,8 @@ main {
     background-image: url(./../imagens/pizza2.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: 25vw 0;
-    background-position: 50vh 0;
+    background-position: 25vw -80vh;
+   
 
 
     /* ./../          chama a pasta*/
