--- a/style/main.css
+++ b/style/main.css
@@ -1,10 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
-
+:root {
+    --cor-primaria: rgb(184, 99, 253);
+    --cor-secundaria: rgb(253, 165, 0);
+    --cor-terciaria: rgb(214, 141, 4);
+    --cor-hover: rgb(153, 216, 81);
+    --cor-texto: rgb(255, 255, 255);
+}
 /* HEADER */
 header {
     width: 100vw;
     height: 20vh;
-    background-color: rgb(184, 99, 253);
+    background-color: var(--cor-primaria);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -13,15 +19,14 @@ header {
 .header__title {
     font-weight: bold;
     font-size: 48px;
-    color: rgb(255, 255, 255);
+    color: var(--cor-texto);
     font-family: "Inter", sans-serif;
 
 }
 
 .header__title--lightsalmon {
-    color: rgb(253, 165, 0);
+    color: var(--cor-secundaria);
 }
-
 /* main */
 main {
     height: 60vh;
@@ -41,7 +46,7 @@ main {
 }
 
 .form {
-    background-color: rgb(255, 169, 56);
+    background-color: var(--cor-secundaria);
     display: flex;
     flex-direction: column;
     width: 380px;
@@ -54,7 +59,7 @@ main {
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.514);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 24px;
-    color: aliceblue;
+    color: var(--cor-texto);
     position: relative;
     left: 200px;
 }
@@ -71,9 +76,12 @@ main {
     border-radius: 5px;
     border: none;
     padding: 12px 30px;
-    background-color: rgb(182, 121, 206);
-    color: aliceblue;
+    background-color: var(--cor-primaria);
+    color: var(--cor-texto);
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.418)
+}
+.form__btn:hover {
+   background-color: var(--cor-secundaria);
 }
 
 .form__btn--action {
@@ -90,7 +98,7 @@ main {
 .footer {
     width: 100vw;
     height: 20vh;
-    background-color: rgb(214, 141, 4);
+    background-color: var(--cor-terciaria);
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -100,32 +108,33 @@ main {
 .footer__columns {
     width: 16%;
     text-align: center;
+    line-height: 25px;
 }
 
 .footer__address {
     font-family: "Inter", sans-serif;
     font-size: 22px;
-    color: aliceblue;
+    color: var(--cor-texto);
     font-weight: lighter;
 }
 
 .footer__sociais {
     font-family: "Inter", sans-serif;
     font-size: 22px;
-    color: aliceblue;
+    color: var(--cor-texto);
     font-weight: lighter;
 }
 
 .footer__devby {
     font-family: "Inter", sans-serif;
     font-size: 22px;
-    color: aliceblue;
+    color: var(--cor-texto);
     font-weight: lighter;
 }
 
 .footer__social-icon {
     text-decoration: none;
-    color: rgb(184, 99, 253);
+    color: var(--cor-primaria);
     font-size: 24px;
 }
 
