--- a/style/samples.css
+++ b/style/samples.css
@@ -11,3 +11,8 @@
     height: 200px;
 }
     /*
+
+git branch ,pstra quais branches temos
+git branch checkout nome da branch para logar
+/* 
+git brnach */
