--- a/style/samples.css
+++ b/style/samples.css
@@ -1,18 +1,42 @@
-/*  
-.pai {
-    background-color: cornflowerblue;
-    width: 75%;
-    height: 200px;
+*{
+    padding: 0%;
+    margin: 0%;
+}
+body {
+    display: flex;
+    justify-content: center;
+    background-color: #ff8a00de;
 }
 
-.filho {
-    background-color: coral;
-    width: 50vw;
-    height: 200px;
+.container {
+    width: 100vw;
+    max-width: 1000px;
+    min-width: 375px;
+    border: 1px solid black;
+    background-color: aliceblue;
 }
-    /*
 
-git branch ,pstra quais branches temos
-git branch checkout nome da branch para logar
-/* 
-git brnach */
+.cols {
+    display: flex;
+    gap: 10px;
+}
+
+.mkt,
+.parceiros {
+    width: 50%;
+    border: 1px solid black;
+
+}
+@media screen and (max-width: 500px){
+   .cols{
+    flex-direction: column;
+   } 
+   .mkt,
+.parceiros {
+    width: 100%;
+    border: 1px solid black;
+}
+}
+/* @media print {
+
+} */
